--- a/android/app/src/main/res/layout/item_hospital.xml
+++ b/android/app/src/main/res/layout/item_hospital.xml
@@ -1,87 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:orientation="vertical"
+    android:padding="15dp">
 
-    <!-- 병원이름 -->
     <TextView
-        android:id="@+id/text_name"
-        android:layout_width="0dp"
+        android:id="@+id/hospital_name_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="병원 이름"
-        android:textSize="18sp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/text_distance"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="병원 이름"/>
 
-    <!-- 거리 km -->
     <TextView
-        android:id="@+id/text_distance"
+        android:id="@+id/hospital_address_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.0 km"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/text_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_name" />
-
-    <!-- 주소 -->
-    <TextView
-        android:id="@+id/text_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="주소"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toStartOf="@+id/layout_congestion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_name" />
-
-    <!-- 혼잡도 표시 -->
-    <LinearLayout
-        android:id="@+id/layout_congestion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@id/text_address"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/text_address">
-
-        <View
-            android:id="@+id/view_congestion_dot"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_marginEnd="6dp"
-            android:background="@color/lime_green" />
-
-        <TextView
-            android:id="@+id/text_congestion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="원활"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <!-- 전화번호 -->
-    <TextView
-        android:id="@+id/text_phone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textSize="12sp"
         android:layout_marginTop="5dp"
-        android:text="전화번호"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_address" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/gray"
+        android:text="주소"/>
+</LinearLayout>
